@@ -1,84 +1,61 @@
-import java.util.Scanner;
-
 public class Main {
 
 	public static void main(String[] args) {
-		// TODO написала эту штуку чтобы посмотреть, как и что работает
-		Point map = new Point(15,10);
-		Snake snake = new Snake();
-		Food food = Food.createFood(snake, map);
-		Scanner in = new Scanner(System.in);
-		String[][] matrix = new String[map.x+1][map.y+1];
-		for (int i = 0; i<=map.x; i++) {
-			for (int j = 0; j<=map.y; j++) {
+		Game game = new Game();
+		String[][] matrix = new String[game.map.x+1][game.map.y+1];
+		for (int i = 0; i<=game.map.x; i++) {
+			for (int j = 0; j<=game.map.y; j++) {
 				matrix[i][j]=". ";
 			}
 		}
-		matrix[snake.snake.get(0).x][snake.snake.get(0).y]="H ";
-		for (int i = 1; i<snake.snake.size(); i++) {
-			matrix[snake.snake.get(i).x][snake.snake.get(i).y]="0 ";
+		matrix[game.snake.snake.getFirst().x][game.snake.snake.getFirst().y]="H ";
+		for (int i = 1; i<game.snake.snake.size(); i++) {
+			matrix[game.snake.snake.get(i).x][game.snake.snake.get(i).y]="0 ";
 		}
-		matrix[food.coordinate.x][food.coordinate.y] = "8 ";
-		int score = 0;
-		System.out.print("очки: ");
-		System.out.println(score);
-		System.out.print("где еда: ");
-		System.out.print(food.coordinate.x);
-		System.out.print(", ");
-		System.out.println(food.coordinate.y);
-		System.out.print("где голова: ");
-		System.out.print(snake.snake.get(0).x);
-		System.out.print(", ");
-		System.out.println(snake.snake.get(0).y);
-		for (int i = 0; i<=map.y; i++) {
-			for (int j = 0; j<=map.x; j++) {
-				System.out.print(matrix[j][map.y-i]);
-			}
-			System.out.print("\n");
-		}
-		char lastDirection = 'd';
+		matrix[game.food.coordinate.x][game.food.coordinate.y] = "8 ";
+		game.score = 0;
+		printMatrix(game, matrix);
 		while (true) {
-			String direction = in.nextLine();
-			char directionChar = direction.charAt(0);
-			for (int i = 0; i<snake.snake.size(); i++) {
-				matrix[snake.snake.get(i).x][snake.snake.get(i).y]=". ";
+			for (int i = 0; i<game.snake.snake.size(); i++) {
+				matrix[game.snake.snake.get(i).x][game.snake.snake.get(i).y]=". ";
 			}
-			if (directionChar == 'w') { snake.movement(Movement.UP);}
-			if (directionChar == 's') {	snake.movement(Movement.DOWN);}
-			if (directionChar == 'a') {	snake.movement(Movement.LEFT);}
-			if (directionChar == 'd') {	snake.movement(Movement.RIGHT);}
-			snake.snakeEatItself();
-			if (snake.snakeDie(map)) {
+			game.moveSnake();
+			game.snake.snakeEatItself();
+			if (game.snake.snakeDie(game.map)) {
 				System.out.println("Game over");
 				break;
 				}
-			if (Point.equal(snake.snake.get(0), food.coordinate)) {
-				score += food.value;
-				matrix[food.coordinate.x][food.coordinate.y] = ". ";
-				food = Food.createFood(snake, map);
-				matrix[food.coordinate.x][food.coordinate.y] = "8 ";
-				snake.eatingFood();
+			if (game.snake.snake.getFirst().equals(game.food.coordinate)) {
+				game.score += game.food.value;
+				matrix[game.food.coordinate.x][game.food.coordinate.y] = ". ";
+				game.food = Food.createFood(game.snake, game.map);
+				matrix[game.food.coordinate.x][game.food.coordinate.y] = "8 ";
+				game.snake.eatingFood();
 			}
-			matrix[snake.snake.get(0).x][snake.snake.get(0).y]="H ";
-			for (int i = 1; i<snake.snake.size(); i++) {
-				matrix[snake.snake.get(i).x][snake.snake.get(i).y]="0 ";
+			matrix[game.snake.snake.getFirst().x][game.snake.snake.getFirst().y]="H ";
+			for (int i = 1; i<game.snake.snake.size(); i++) {
+				matrix[game.snake.snake.get(i).x][game.snake.snake.get(i).y]="0 ";
 			}
-			System.out.print("очки: ");
-			System.out.println(score);
-			System.out.print("где еда: ");
-			System.out.print(food.coordinate.x);
-			System.out.print(", ");
-			System.out.println(food.coordinate.y);
-			System.out.print("где голова: ");
-			System.out.print(snake.snake.get(0).x);
-			System.out.print(", ");
-			System.out.println(snake.snake.get(0).y);
-			for (int i = 0; i<=map.y; i++) {
-				for (int j = 0; j<=map.x; j++) {
-					System.out.print(matrix[j][map.y-i]);
-				}
-				System.out.print("\n");
+			printMatrix(game, matrix);
+		}
+	}
+	
+	private static void printMatrix(Game game, String[][] matrix) {
+		System.out.print("очки: ");
+		System.out.println(game.score);
+		System.out.print("где еда: ");
+		System.out.print(game.food.coordinate.x);
+		System.out.print(", ");
+		System.out.println(game.food.coordinate.y);
+		System.out.print("где голова: ");
+		System.out.print(game.snake.snake.getFirst().x);
+		System.out.print(", ");
+		System.out.println(game.snake.snake.getFirst().y);
+		for (int i = 0; i<=game.map.y; i++) {
+			for (int j = 0; j<=game.map.x; j++) {
+				System.out.print(matrix[j][game.map.y-i]);
 			}
+			System.out.print("\n");
 		}
 	}
 }
